# ITI-Embedded-Linux-kitchen

./: .gitignore  README.md
01-FileSystem/01-CreatingVirtualSD-Card/: README.md
02-u-boot/: README.md
Task1-FileSystem/01-CreatingVirtualSD-Card/: README.md
Task10_Systemd_Boot_Design_for_Qt_Weather_App/: README.md  qt-app.service  qt-app.target  qt-prep.service
Task10_Systemd_Boot_Design_for_Qt_Weather_App/qt-app.target.wants/: mnt-appdata.mount  qt-app.service  qt-prep.service
Task2-u-boot/: README.md
Task3-BareMetaCode/: README.md  abdelfattah_blinky.elf  linker.ld  startup.s
Task3-BareMetalCode/: BCM2837_GPIO.h  README.md  main.c  makefile
Task4-uboot-tftp-sdcard/: README.md
Task5-kernel/: README.md
Task6_Build_Boot_Custom_Kernel/: README.md
Task7_Initramfs_with_busybox/: README.md
Task8_Dual_Partion_Selection/: README.md
Task9_Qt_App_on_Rpi3B+_with_Buildroot/: README.md
Task9_Qt_App_on_Rpi3B+_with_Buildroot/itisimplecal/: CMakeLists.txt  Config.in  itisimplecal.mk  main.cpp  resources.qrc
Task9_Qt_App_on_Rpi3B+_with_Buildroot/rootfs-overlay/etc/: qt_kms.conf
Task9_Qt_App_on_Rpi3B+_with_Buildroot/rootfs-overlay/etc/init.d/: S99qtcalculator
wiki/01-FileSystem/: .sd.img.swp
